# DeepRetro

./: .coverage  .dockerignore  .env.template  .gitignore  .readthedocs.yml  Dockerfile  USPTO-50k_500.csv  USPTO-50k_500_failed.csv  appv2.js  cache.py  check_api_key.py  demo_complete_cycle.py  docker-compose.yml  env.example  environment.yml  nohup.out  nohup_01_30_2025.out  nohup_3.out  nohup_old.out  nohup_old2.out  prod.ipynb  prod_challenge.ipynb  prod_challenge_old.ipynb  prod_challenge_runner1.py  prod_challenge_runner2.py  prod_challenge_runner3.py  prod_challenge_runner4.py  prod_challenge_runner5.py  prod_old.ipynb  prod_oldV2.ipynb  pyproject.toml  readme.md  req.txt  retro.code-workspace  runner1_failed.out  runner2.out  runner5.out  runner5_failed.out  start_backend.sh  test_deprotecting_group.py  (+7 more)
.github/: PULL_REQUEST_TEMPLATE.md
benchmarks/: README.md  sample_molecules_by_clusters.py
config/: advanced_settings.json  langfuse_config.json
data/: USPTO-50k_100.csv  USPTO-50k_500_manual_verification.csv  USPTO-50k_500_results.csv  USPTO_190.csv  USPTO_190_sample.csv  basic_mols.csv  challenge_mols.csv  download_pistachio_models.py  uspto_50k_test_250.csv
docs/: Makefile  requirements.txt
logs/: push_logs_s3.py  readme.md
notebooks/: api_tests.ipynb  llm_test.ipynb  misc_tests.ipynb  multi_step_benchmark.ipynb  multi_step_benchmark_new.ipynb  prod_challenge.ipynb  prod_challenge_old.ipynb  stability_hallucination.ipynb  test_custom_error_codes.ipynb
reaction_prediction/: reaction_classification.ipynb
results/: O[C@H]1C=C2C3N(C[C@H]2OC)CC4=CC5=C(OCO5)C=C4C3[C@@H]1OC(C)=O_1.json  O[C@H]1C=C2C3N(C[C@H]2OC)CC4=CC5=C(OCO5)C=C4C3[C@@H]1OC(C)=O_2.json
src/: __init__.py  api.py  cache.py  deprotecting_group.py  index.html  main.py  metadata.py  prithvi.py  prod_chal_runner.py  runner.out  (+3 more)
(+794 files in other folders)
