[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "DeepRetro"
version = "0.0.1"
description = "DeepRetro: Recursive LLM for reaction prediction"
authors = [{name = "Project Contributors"}]
readme = "readme.md"
requires-python = ">=3.9"
dependencies = [
    "anthropic",
    "openai",
    "langfuse",
    "flask",
    "numpy",
    "pandas",
    "rdkit-pypi",
    "requests",
    "boto3",
    "azure-ai-ml",
    "together",
    "fireworks-ai"
]

[project.optional-dependencies]
docs = [
    "sphinx>=4.5.0",
    "sphinx-rtd-theme>=1.0.0",
    "sphinx-autodoc-typehints>=1.19.5",
    "myst-parser>=0.18.0"
]

[project.urls]
Documentation = "https://DeepRetro.readthedocs.io/"
Repository = "https://github.com/deepforestsci/DeepRetro"

[tool.setuptools.packages.find]
where = ["src"] 